--- a/index.html
+++ b/index.html
@@ -48,13 +48,20 @@
 			<li data-target="#main-slider" data-slide-to="2"></li>
 		</ol>
 		<div class="carousel-inner">
-      <video autoplay="" muted="" loop="" class="item active">
-        <source src="video.mp4" type="video/mp4">
-        <div class="container">
-          <div class="row">
-          </div>
-        </div>
-      </video>
+			<div class="item active" style="background-image: url(bg2.jpg)">
+				<div class="container">
+					<div class="row">
+							<div class="carousel-content">
+								<h1 class="animation animated-item-1">Ayo Bergabung Bersama Kami</h1>
+								<div class="animation animated-item-2">
+									G-68 Code Team | IT Development & IT Solution
+								</div>
+							   <a class="btn-slide white animation animated-item-3" href="#">Lihat Selengkapnya</a>
+								<a class="btn-slide animation animated-item-3" href="#">Pesan Sekarang</a>
+							</div>
+					</div>
+				</div>
+			</div>
 			<!--/.item-->
 			<div class="item" style="background-image: url(bg1.jpg)">
 				<div class="container">
@@ -77,7 +84,7 @@
 							<div class="carousel-content">
 								<h1 class="animation animated-item-1">Sampai Bertemu Di Project Selanjutnya</h1>
 								<div class="animation animated-item-2">
-							         G-68 Code Team | IT Development & IT Solution.
+								   Tertarik untuk bekerja sama dengan  G-68 Code Team? Beri Kami Gambaran / Detail yang Anda Inginkan, Kami akan Merespon Secepat Mungkin.
 								</div>
 								<a class="btn-slide white animation animated-item-3" href="#">Lihat Selengkapnya</a>
 								<a class="btn-slide animation animated-item-3" href="#">Pesan Sekarang</a>
