--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
 	<a href="#">Kontak</a>
 	<a href="#">Tentang Kami</a>
 	</div>
-	<span class="fa fa-bars menu-icon"></span>
-   <div class="menu-icon">
-	 <span class="fa fa-bars">
-
-	 </span>
    </div>
 
   </div>
@@ -192,10 +187,10 @@
 						Team G-68 is a blog for web designers, graphic designers, web developers &amp; Networking  Learner.
 					</p>
 					<div class="footer-icons">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
-						<a href="#"><i class="fa fa-github"></i></a>
+						<a href="#"><i class="fab fa-facebook-square"></i></i></a>
+						<a href="#"><i class="fab fa-twitter-square"></i></a>
+						<a href="#"><i class="fab fa-linkedin"></i></a>
+						<a href="#"><i class="fab fa-github-square"></i></a>
 					</div>
 				</div>
 				</div>
