--- a/index.html
+++ b/index.html
@@ -169,21 +169,19 @@
 				</div>
 				<div class="footer-center">
 					<div>
-						<i class="fa fa-map-marker"></i>
 						<p><span> Indonesian Revolution </span> Indonesia</p>
 					</div>
 					<div>
-						<i class="fa fa-phone"></i>
+						
 						<p>+62 8969677678</p>
 					</div>
 					<div>
-						<i class="fa fa-envelope"></i>
 						<p><a href="mailto:support@company.com">contact@team_G-68.com</a></p>
 					</div>
 				</div>
 				<div class="footer-right">
 					<p class="footer-company-about">
-						<span>About the company</span>
+						<span>ABOUT THE COMPANY</span>
 						Team G-68 is a blog for web designers, graphic designers, web developers &amp; Networking  Learner.
 					</p>
 		
