--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 				</div>
 				<div class="footer-center">
 					<div>
+						<i class="fab fa-github-square"></i>
 						<p><span> Indonesian Revolution </span> Indonesia</p>
 					</div>
 					<div>
