--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 				</div>
 				<div class="footer-center">
 					<div>
-						<i class="fab fa-github-square"></i>
-						<p><span> Indonesian Revolution </span> Indonesia</p>
+				
+						<p><span> Indonesian Revolution </span></p>
 					</div>
 					<div>
 						
